Fix alignment of 'Send to Messenger' button (#304)
* Use media query breakpoints for send to messenger button

* Fix button for mobile device

* Align button regardless of screen dimension

* Add comment

--- a/src/stylesheets/channels.less
+++ b/src/stylesheets/channels.less
@@ -65,17 +65,8 @@
 
     .sk-fb-button-wrapper {
         text-align: left;
-    }
-
-    .fb-send-to-messenger {
-        margin-left: 54px;
-
-        @media (max-width: @widget-width-sm) {
-            margin-left: 0;
-        }
-
-        @media (min-width: @screen-lg-min) {
-            margin-left: 90px;
-        }
+        // -76px is half the width of the 'Send to Messenger' button
+        transform: translateX(-76px);
+        margin-left: 50%;
     }
 }
